--- a/app/src/main/res/drawable/ic_button_background.xml
+++ b/app/src/main/res/drawable/ic_button_background.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle" >
 
     <solid
-        android:color="#DD014085" >
+        android:color="@color/colorPrimary" >
     </solid>
 
     <corners android:radius="2dp" />
