--- a/app/src/main/res/drawable/ic_clear.xml
+++ b/app/src/main/res/drawable/ic_clear.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="1024">
   <path
       android:pathData="M960,154.24L869.76,64 512,421.76 154.24,64 64,154.24 421.76,512 64,869.76 154.24,960 512,602.24 869.76,960 960,869.76 602.24,512z"
-      android:fillColor="#262626"/>
+      android:fillColor="@color/black"/>
 </vector>
