--- a/app/src/main/res/drawable/ic_drop_down.xml
+++ b/app/src/main/res/drawable/ic_drop_down.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="1024">
   <path
       android:pathData="M512,610.88L930.88,192 1024,285.12l-512,512 -512,-512L93.12,192z"
-      android:fillColor="#262626"/>
+      android:fillColor="@color/black"/>
 </vector>
