--- a/app/src/main/res/drawable/ic_drop_up.xml
+++ b/app/src/main/res/drawable/ic_drop_up.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="1024">
   <path
       android:pathData="M512,378.24l-418.88,418.88L0,704l512,-512 512,512 -93.12,93.12z"
-      android:fillColor="#262626"/>
+      android:fillColor="@color/black"/>
 </vector>
