--- a/app/src/main/res/layout/activity__mark_allocation.xml
+++ b/app/src/main/res/layout/activity__mark_allocation.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -8,95 +11,19 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <RelativeLayout
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_project_mark_allocation"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/ic_header_background"
-            android:layout_weight="14"
-            android:elevation="40dp">
-
-            <TextView
-                android:id="@+id/textView_projectName_markAllocation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:fontFamily="sans-serif-medium"
-                android:text="Projects "
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                android:textColor="#ffffff"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/textView_projectName_markAllocation"
-                xmlns:app="http://schemas.android.com/apk/res-auto">
-
-                <TextView
-                    android:id="@+id/textView_helloUser_markAllocation"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="100"
-                    android:fontFamily="sans-serif-medium"
-                    android:text="Hello, Xxxxxx Xxxxxx"
-                    android:textColor="#ffffff"
-                    android:gravity="right|center_vertical"
-                    android:singleLine="true"
-                    app:autoSizeTextType="uniform"
-                    app:autoSizeMinTextSize="10dp"
-                    app:autoSizeMaxTextSize="14dp"
-                    app:autoSizeStepGranularity="2dp" />
-
-                <View
-                    android:id="@+id/divider13"
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:background="#ffffff" />
-
-                <TextView
-                    android:id="@+id/textView10"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-medium"
-                    android:text="Help"
-                    android:textColor="#ffffff"
-                    android:gravity="right|center_vertical"
-                    android:singleLine="true"
-                    app:autoSizeTextType="uniform"
-                    app:autoSizeMinTextSize="10dp"
-                    app:autoSizeMaxTextSize="14dp"
-                    app:autoSizeStepGranularity="2dp" />
-
-                <View
-                    android:id="@+id/divider14"
-                    android:layout_width="1dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
-                    android:background="#ffffff" />
-
-                <TextView
-                    android:id="@+id/textView_logout_markAllocation"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
-                    android:fontFamily="sans-serif-medium"
-                    android:text="Log Out"
-                    android:textColor="#ffffff"
-                    android:singleLine="true"
-                    app:autoSizeTextType="uniform"
-                    app:autoSizeMinTextSize="10dp"
-                    app:autoSizeMaxTextSize="14dp"
-                    app:autoSizeStepGranularity="2dp" />
-
-            </LinearLayout>
-
-        </RelativeLayout>
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            toolbar:titleTextColor="@color/white"
+            app:titleTextAppearance="@style/ActionBarTitle">
+        </android.support.v7.widget.Toolbar>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -107,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ic_back" />
+                android:src="@drawable/back" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -123,27 +50,24 @@
                         android:id="@+id/textView_title_markAllocation"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentLeft="true"
-                        android:layout_marginStart="30dp"
-                        android:layout_marginTop="25dp"
-                        android:text="Customised Grading Criteria"
-                        android:textColor="#dd000000"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+                        android:text="Customised Marking Criteria"
+                        style="@style/NewProjectElementTitle" />
 
                     <View
-                        android:id="@+id/divider8"
+                        android:id="@+id/divider_mark_allocation"
                         android:layout_width="match_parent"
                         android:layout_height="5dp"
                         android:layout_below="@id/textView_title_markAllocation"
                         android:layout_marginTop="10dp"
                         android:layout_marginStart="10dp"
                         android:layout_marginEnd="10dp"
-                        android:background="#014085" />
+                        android:background="@color/colorPrimary" />
+
                     <GridView
                         android:id="@+id/gridView_CriteriaList_markAllocation"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_below="@id/divider8"
+                        android:layout_below="@id/divider_mark_allocation"
                         android:horizontalSpacing="50dp"
                         android:layout_marginTop="20dp"
                         android:layout_marginLeft="10dp"
@@ -160,56 +84,38 @@
                     android:layout_weight="5">
 
                     <Button
-                        android:id="@+id/button_back_markAllocation"
-                        android:layout_width="wrap_content"
-                        android:layout_height="36dp"
-                        android:textSize="14dp"
-                        android:paddingLeft="16dp"
-                        android:paddingRight="16dp"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentBottom="true"
-                        android:layout_marginStart="30dp"
-                        android:layout_marginBottom="50dp"
-                        android:onClick="back_markAllocation"
-                        android:text="Back"
-                        android:background="@drawable/ic_button_background"
-                        android:textColor="#ffffff"/>
-
-                    <Button
                         android:id="@+id/button_save_markAllocation"
                         android:layout_width="wrap_content"
                         android:layout_height="36dp"
-                        android:textSize="14dp"
+                        android:textSize="20sp"
                         android:paddingLeft="16dp"
                         android:paddingRight="16dp"
                         android:layout_alignParentBottom="true"
-                        android:layout_marginRight="40dp"
+                        android:layout_marginEnd="40dp"
                         android:layout_marginBottom="50dp"
-                        android:layout_toLeftOf="@+id/button_next_markAllocation"
+                        android:layout_toStartOf="@+id/button_next_markAllocation"
                         android:onClick="save_markAllocation"
                         android:text="Save"
-                        android:background="@drawable/ic_save_button"/>
+                        android:textColor="@color/white"
+                        android:background="@drawable/ic_button_background"/>
 
                     <Button
                         android:id="@+id/button_next_markAllocation"
                         android:layout_width="wrap_content"
                         android:layout_height="36dp"
-                        android:textSize="14dp"
+                        android:textSize="20sp"
                         android:paddingLeft="16dp"
                         android:paddingRight="16dp"
-                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true"
                         android:layout_alignParentBottom="true"
-                        android:layout_marginEnd="30dp"
+                        android:layout_marginEnd="50dp"
                         android:layout_marginBottom="50dp"
                         android:background="@drawable/ic_button_background"
                         android:onClick="next_markAllocation"
                         android:text="Next"
                         android:textColor="#ffffff" />
-
                 </RelativeLayout>
             </LinearLayout>
-
         </RelativeLayout>
-
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
