--- a/app/src/main/res/layout/activity_login_test_.xml
+++ b/app/src/main/res/layout/activity_login_test_.xml
@@ -6,14 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".Activity_Login">
 
-    <RelativeLayout
+    <com.example.feedback.LoginVideoView
+        android:id="@+id/videoview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"/>
 
-        <com.example.feedback.LoginVideoView
-            android:id="@+id/videoview"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true" >
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent">
 
 <!--        <ImageView-->
 <!--            android:layout_width="match_parent"-->
@@ -21,9 +26,6 @@
 <!--            android:scaleType="centerCrop"-->
 <!--            android:src="@drawable/ic_back" />-->
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -221,7 +223,7 @@
                         android:layout_centerHorizontal="true"
                         android:layout_marginTop="15dp"
                         android:layout_marginBottom="15dp"
-                        android:background="@drawable/ripple_foreground"
+                        android:background="@drawable/ripple_button"
                         android:fontFamily="sans-serif-black"
                         android:onClick="login"
                         android:text="Login"
@@ -230,7 +232,7 @@
 
                 </LinearLayout>
             </LinearLayout>
-        </ScrollView>
-    </RelativeLayout>
+        </RelativeLayout>
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
