--- a/app/src/main/res/layout/activity_show_comment_markallocation.xml
+++ b/app/src/main/res/layout/activity_show_comment_markallocation.xml
@@ -14,61 +14,74 @@
                 android:id="@+id/button_back_showComment"
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
-                android:textSize="14dp"
+                android:textSize="25sp"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
                 android:layout_alignParentStart="true"
                 android:onClick="back_showComment"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="15dp"
                 android:text="Done"
-                android:background="@drawable/ic_white_button"
-                android:textColor="#000000"/>
+                android:textAllCaps="false"
+                android:background="@drawable/ic_button_background"
+                android:textColor="@color/white"/>
 
             <Button
                 android:id="@+id/button_add_showComment"
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
-                android:textSize="14dp"
+                android:textSize="25sp"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
                 android:layout_toLeftOf="@id/button_edit_showComment"
                 android:layout_alignTop="@id/button_back_showComment"
                 android:onClick="add_showComment"
                 android:background="@drawable/ic_button_background"
-                android:text="add"
-                android:textColor="#ffffff"/>
+                android:text="Add"
+                android:textAllCaps="false"
+                android:textColor="@color/white"/>
 
             <Button
                 android:id="@+id/button_edit_showComment"
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
-                android:textSize="14dp"
+                android:textSize="25sp"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
                 android:layout_toLeftOf="@id/button_delete_showComment"
                 android:onClick="edit_longText_showComment"
                 android:layout_alignTop="@id/button_back_showComment"
-                android:background="@drawable/ic_save_button"
+                android:background="@drawable/ic_button_background"
                 android:layout_marginLeft="16dp"
-                android:text="Edit" />
+                android:text="Edit"
+                android:textAllCaps="false"
+                android:textColor="@color/white" />
 
             <Button
                 android:id="@+id/button_delete_showComment"
                 android:layout_width="wrap_content"
                 android:layout_height="36dp"
-                android:textSize="14dp"
+                android:textSize="25sp"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
                 android:layout_alignParentEnd="true"
                 android:layout_alignTop="@id/button_back_showComment"
                 android:onClick="delete_showComment"
-                android:background="@drawable/ic_save_button"
+                android:background="@drawable/ic_button_background"
                 android:layout_marginRight="16dp"
                 android:layout_marginLeft="16dp"
+                android:text="Delete"
+                android:textAllCaps="false"
+                android:textColor="@color/white" />
 
-                android:text="delete" />
+            <View
+                android:id="@+id/divider_title_"
+                android:layout_width="match_parent"
+                android:layout_height="3dp"
+                android:layout_marginBottom="10dp"
+                android:layout_below="@id/button_back_showComment"
+                android:background="@color/colorPrimary" />
         </RelativeLayout>
 
         <LinearLayout
@@ -85,7 +98,8 @@
                 android:layout_weight="10"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
-                android:layout_marginTop="8dp">
+                android:layout_marginTop="8dp"
+                android:dividerHeight="2dp"
                 android:choiceMode="singleChoice">
             </ExpandableListView>
 
@@ -104,8 +118,7 @@
                 android:paddingRight="16dp"
                 android:layout_marginTop="8dp"
                 android:choiceMode="singleChoice"
-                android:dividerHeight="1dp"
-                />
+                android:dividerHeight="1dp"/>
 
         </LinearLayout>
     </RelativeLayout>
