--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -9,8 +9,12 @@
     <com.example.feedback.LoginVideoView
         android:id="@+id/videoview1"
         android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <ScrollView
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        android:fillViewport="true" >
 
 <!--    <ImageView-->
 <!--        android:layout_width="match_parent"-->
@@ -20,20 +24,16 @@
 <!--        tools:layout_editor_absoluteX="0dp"-->
 <!--        tools:layout_editor_absoluteY="0dp" />-->
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/logo"
                 android:layout_width="400dp"
                 android:layout_height="200dp"
+                android:layout_marginTop="50dp"
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/unimelb_logo" />
 
@@ -308,7 +308,7 @@
                         android:layout_centerHorizontal="true"
                         android:layout_marginBottom="25dp"
                         android:layout_weight="1"
-                        android:background="@drawable/ripple_foreground"
+                        android:background="@drawable/ripple_button"
                         android:fontFamily="sans-serif-black"
                         android:onClick="signup"
                         android:text="Submit"
@@ -316,15 +316,14 @@
                         android:textAppearance="@style/TextAppearance.AppCompat.Button"
                         android:textColor="@color/white" />
                 </LinearLayout>
-
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
-    <android.support.constraint.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="20dp" />
+<!--    <android.support.constraint.Guideline-->
+<!--        android:id="@+id/guideline"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="vertical"-->
+<!--        app:layout_constraintGuide_begin="20dp" />-->
 </android.support.constraint.ConstraintLayout>
