--- a/app/src/main/res/layout/dialog_add_comment.xml
+++ b/app/src/main/res/layout/dialog_add_comment.xml
@@ -17,8 +17,9 @@
             android:id="@+id/textView_subsetion_addComment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16dp"
+            android:textSize="20sp"
             android:text="Subsection:"
+            android:textColor="@color/black"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <Spinner
@@ -27,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/textView_subsetion_addComment"
-            android:spinnerMode="dropdown" />
+            android:spinnerMode="dropdown"/>
     </RelativeLayout>
 
     <View
@@ -52,7 +53,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="Others:"
-            android:textSize="16dp"
+            android:textSize="20sp"
+            android:textColor="@color/black"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <EditText
@@ -62,7 +64,8 @@
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/textView_others_addComment"
             android:ems="10"
-            android:textSize="14dp"
+            android:textSize="20sp"
+            android:textColor="@color/black"
             android:hint="Subsection name"
             android:inputType="textPersonName"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
@@ -95,7 +98,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="ShortText:"
-            android:textSize="16dp"
+            android:textSize="20sp"
+            android:textColor="@color/black"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
     </RelativeLayout>
 
@@ -124,7 +128,8 @@
             android:layout_toRightOf="@id/textView_otherShortText_addComment"
             android:ems="10"
             android:hint="Short-text content"
-            android:textSize="14dp"
+            android:textSize="20sp"
+            android:textColor="@color/black"
             android:inputType="textPersonName"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
@@ -134,7 +139,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:text="Others:"
-            android:textSize="16dp"
+            android:textSize="20sp"
+            android:textColor="@color/black"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         <EditText
@@ -145,7 +151,8 @@
             android:layout_toRightOf="@id/editText_shortText_addComment"
             android:ems="10"
             android:hint="Grade"
-            android:textSize="14dp"
+            android:textSize="20sp"
+            android:textColor="@color/black"
             android:inputType="number"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
@@ -157,8 +164,8 @@
             android:layout_below="@id/editText_shortTextgrade_addComment"
             android:layout_alignLeft="@id/editText_shortTextgrade_addComment"
             android:layout_marginLeft="3dp"
-            android:textSize="12dp"
-            android:textColor="#000000" />
+            android:textSize="20sp"
+            android:textColor="@color/black" />
     </RelativeLayout>
 
 
@@ -186,7 +193,7 @@
             android:layout_toRightOf="@id/textView_longText_addComment"
             android:ems="100"
             android:gravity="start|top"
-            android:textSize="14dp"
+            android:textSize="20sp"
             android:hint="Long-text content"
             android:inputType="textMultiLine"
             android:singleLine="false"
@@ -197,7 +204,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:textSize="16dp"
+            android:textSize="20sp"
             android:text="LongText:"
             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
     </RelativeLayout>
