--- a/app/src/main/res/layout/dialog_asseccors.xml
+++ b/app/src/main/res/layout/dialog_asseccors.xml
@@ -4,60 +4,56 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/textView_Title_dialogAssessor"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:text="Edit Assessor"
-        android:textSize="24dp"
-        android:paddingTop="10dp"
-        android:paddingLeft="16dp"
-        android:textColor="#000000"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
+        android:layout_height="match_parent"
+        android:fillViewport="true" >
 
-    <View
-        android:id="@+id/divider21"
-        android:layout_width="match_parent"
-        android:layout_below="@+id/textView_Title_dialogAssessor"
-        android:layout_height="2dp"
-        android:background="#DD014085" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:id="@+id/relativeLayout_bottom_dialogAssessor"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/divider21">
+            <TextView
+                android:id="@+id/textView_Title_dialogAssessor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:text="Invite Marker"
+                android:textSize="30sp"
+                android:textStyle="bold"
+                android:paddingTop="10dp"
+                android:paddingLeft="16dp"
+                android:textColor="@color/black"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"/>
 
-        <EditText
-            android:id="@+id/editText_inviteAssessor_dialogAssessor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:hint="Enter email address"
-            android:layout_marginLeft="16dp"
-            android:textSize="16dp"
-            android:ems="20"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:inputType="textPersonName" />
+            <View
+                android:id="@+id/divider21"
+                android:layout_width="match_parent"
+                android:layout_below="@id/textView_Title_dialogAssessor"
+                android:layout_height="2dp"
+                android:background="@color/colorPrimary" />
 
-        <Button
-            android:id="@+id/button_invite_dialogAssessor"
-            android:layout_width="wrap_content"
-            android:layout_height="48dp"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="15dp"
-            android:text="invite"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"/>
-    </RelativeLayout>
+            <EditText
+                android:id="@+id/editText_inviteAssessor_dialogAssessor"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_below="@id/divider21"
+                android:hint="Enter email address"
+                android:layout_marginLeft="16dp"
+                android:textSize="22sp"
+                android:ems="20"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:inputType="textPersonName" />
 
-    <ListView
-        android:id="@+id/listView_assessors_dialogAssessor"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:layout_below="@+id/relativeLayout_bottom_dialogAssessor" />
+            <ListView
+                android:id="@+id/listView_assessors_dialogAssessor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:layout_below="@id/editText_inviteAssessor_dialogAssessor" />
+        </RelativeLayout>
+    </ScrollView>
 
 </RelativeLayout>
