--- a/app/src/main/res/layout/dialog_edit_comment.xml
+++ b/app/src/main/res/layout/dialog_edit_comment.xml
@@ -12,6 +12,7 @@
             android:inputType="textMultiLine"
             android:singleLine="false"
             android:text="Name"
+            android:textSize="20sp"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:scrollHorizontally="false" />
     </RelativeLayout>
