--- a/app/src/main/res/layout/list_item_criterialist_default.xml
+++ b/app/src/main/res/layout/list_item_criterialist_default.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="TextView"
-    android:textSize="16dp"
+    android:textSize="20sp"
     android:paddingTop="8dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
-    android:textColor="#de000000"
-    android:drawableRight="@drawable/ic_drag"/>
+    android:textColor="@color/black"
+    android:drawableRight="@drawable/ripple_drag_criteria"/>
