--- a/app/src/main/res/layout/list_item_longtext_showcomments.xml
+++ b/app/src/main/res/layout/list_item_longtext_showcomments.xml
@@ -11,6 +11,7 @@
             android:layout_alignParentStart="true"
             android:text="TextView"
             android:padding="5dp"
-            android:textSize="14dp"
+            android:textColor="@color/black"
+            android:textSize="20sp"
             android:textStyle="normal" />
     </RelativeLayout>
