--- a/app/src/main/res/layout/list_item_markers.xml
+++ b/app/src/main/res/layout/list_item_markers.xml
@@ -5,24 +5,23 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textView_inlistView"
-        android:layout_alignParentStart="true"
-        android:layout_toStartOf="@id/Bt_delete_inlist"
-        android:gravity="center_vertical|start"
+        android:id="@+id/textView_markerName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:text="TextView"
         android:textSize="25sp"
-        android:padding="10dp"
         android:textColor="@color/black"
-        android:singleLine="false" />
+        android:padding="10dp" />
 
     <Button
-        android:id="@+id/Bt_delete_inlist"
+        android:id="@+id/button_deleteMarker"
+        android:layout_alignParentEnd="true"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="15dp"
-        android:background="@drawable/ic_bin" />
+        android:layout_marginEnd="40dp"
+        android:layout_marginStart="10dp"
+        android:padding="10dp"
+        android:background="@drawable/ic_close"/>
 </RelativeLayout>
