--- a/app/src/main/res/layout/list_item_shorttext_showcomments.xml
+++ b/app/src/main/res/layout/list_item_shorttext_showcomments.xml
@@ -10,6 +10,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="70dp"
             android:text="TextView"
-            android:textSize="14dp"
-            android:textStyle="bold"/>
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            />
     </RelativeLayout>
