--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorPrimary</item>
     </style>
 
     <style name="SwitchTheme" parent="@android:style/TextAppearance.Small">
@@ -28,11 +28,13 @@
 
     <style name="NewProjectElementTitle">
         <item name="android:textSize">30sp</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:layout_marginTop">25dp</item>
         <item name="android:layout_marginLeft">30dp</item>
         <item name="android:layout_alignParentStart">true</item>
         <item name="android:gravity">left|center_vertical</item>
+        <item name="android:singleLine">true</item>
     </style>
 
 </resources>
