--- a/app/src/main/res/layout/activity_assessment__preparation_.xml
+++ b/app/src/main/res/layout/activity_assessment__preparation_.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true" >
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -38,6 +39,7 @@
                 android:baselineAligned="false"
                 android:orientation="horizontal"
                 android:layout_weight="1"
+                android:background="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -145,7 +147,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="15dp"
                             android:layout_marginTop="20dp"
-                            android:background="@android:color/transparent"
+                            android:background="@drawable/ripple_normal_button"
                             android:drawableRight="@drawable/ic_pencil"
                             android:fontFamily="sans-serif-medium"
                             android:paddingRight="10dp"
@@ -182,7 +184,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="15dp"
                             android:paddingRight="10dp"
-                            android:background="@android:color/transparent"
+                            android:background="@drawable/ripple_normal_button"
                             android:drawableRight="@drawable/ic_pencil"
                             android:fontFamily="sans-serif-medium"
                             android:gravity="left|center"
@@ -218,7 +220,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="15dp"
                             android:paddingRight="10dp"
-                            android:background="@android:color/transparent"
+                            android:background="@drawable/ripple_normal_button"
                             android:drawableRight="@drawable/ic_pencil"
                             android:fontFamily="sans-serif-medium"
                             android:gravity="left|center"
@@ -254,7 +256,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="15dp"
                             android:paddingRight="10dp"
-                            android:background="@android:color/transparent"
+                            android:background="@drawable/ripple_normal_button"
                             android:drawableRight="@drawable/ic_pencil"
                             android:fontFamily="sans-serif-medium"
                             android:gravity="left|center"
