--- a/app/src/main/res/layout/activity__criteria_list.xml
+++ b/app/src/main/res/layout/activity__criteria_list.xml
@@ -77,20 +77,38 @@
                             android:background="@drawable/ic_criteria_background"
                             android:orientation="vertical">
 
-                            <TextView
-                                android:id="@+id/textView_CriteriaList_inCriteriaList"
+                            <RelativeLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="sans-serif-medium"
-                                android:gravity="left"
-                                android:paddingLeft="20dp"
-                                android:paddingRight="10dp"
-                                android:paddingTop="10dp"
-                                android:paddingBottom="5dp"
-                                android:text="Criteria List"
-                                android:textStyle="bold"
-                                android:textColor="@color/black"
-                                android:textSize="25sp" />
+                                android:layout_height="wrap_content">
+
+                                <TextView
+                                    android:id="@+id/textView_CriteriaList_inCriteriaList"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:fontFamily="sans-serif-medium"
+                                    android:layout_toStartOf="@id/button_uploadMarkedCriteria_criteriaList"
+                                    android:gravity="left"
+                                    android:paddingLeft="20dp"
+                                    android:paddingRight="10dp"
+                                    android:paddingTop="10dp"
+                                    android:paddingBottom="5dp"
+                                    android:text="Criteria List"
+                                    android:textStyle="bold"
+                                    android:textColor="@color/black"
+                                    android:textSize="25sp" />
+
+                                <Button
+                                    android:id="@+id/button_uploadMarkedCriteria_criteriaList"
+                                    android:layout_width="30dp"
+                                    android:layout_height="30dp"
+                                    android:layout_alignParentEnd="true"
+                                    android:layout_centerVertical="true"
+                                    android:layout_marginEnd="20dp"
+                                    android:background="@drawable/ic_excel"
+                                    android:onClick="uploadCriteria"
+                                    android:gravity="right" />
+
+                            </RelativeLayout>
 
                             <View
                                 android:id="@+id/divider15"
@@ -133,7 +151,7 @@
                                     android:layout_height="wrap_content"
                                     android:layout_alignParentLeft="true"
                                     android:layout_alignParentTop="true"
-                                    android:layout_toStartOf="@id/button_uploadMarkedCriteria_criteriaList"
+                                    android:layout_toStartOf="@id/button_addMarkedCriteria_criteriaList"
                                     android:fontFamily="sans-serif-medium"
                                     android:paddingLeft="20dp"
                                     android:paddingBottom="5dp"
@@ -143,17 +161,6 @@
                                     android:textColor="@color/black"
                                     android:textStyle="bold"
                                     android:textSize="25sp" />
-
-                                <Button
-                                    android:id="@+id/button_uploadMarkedCriteria_criteriaList"
-                                    android:layout_width="30dp"
-                                    android:layout_height="30dp"
-                                    android:layout_toStartOf="@id/button_addMarkedCriteria_criteriaList"
-                                    android:layout_centerVertical="true"
-                                    android:layout_marginRight="10dp"
-                                    android:background="@drawable/ic_excel"
-                                    android:onClick="uploadCriteria"
-                                    android:gravity="right" />
 
                                 <Button
                                     android:id="@+id/button_addMarkedCriteria_criteriaList"
