--- a/app/src/main/res/layout/activity__review_report.xml
+++ b/app/src/main/res/layout/activity__review_report.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,103 +11,19 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="14"
-            android:background="@drawable/ic_header_background"
-            android:elevation="40dp">
-
-            <Button
-                android:id="@+id/button_back_title"
-                android:layout_width="34dp"
-                android:layout_height="25dp"
-                android:layout_centerVertical="true"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="15dp"
-                android:background="@drawable/ic_back" />
-
-            <TextView
-                android:id="@+id/textView_title_reviewReport"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:fontFamily="sans-serif-medium"
-                android:text="Project Reports"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                android:textColor="#ffffff"
-                android:textSize="18dp"
-                android:textStyle="bold"
-                />
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/textView_title_realtimeAssessment"
-                xmlns:app="http://schemas.android.com/apk/res-auto">
-
-                <TextView
-                    android:id="@+id/textView_helloUser_reviewReport"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="100"
-                    android:fontFamily="sans-serif-medium"
-                    android:gravity="right|center_vertical"
-                    android:text="Hello, Xxxxxx Xxxxxx"
-                    android:textColor="#ffffff"
-                    android:singleLine="true"
-                    app:autoSizeTextType="uniform"
-                    app:autoSizeMinTextSize="10dp"
-                    app:autoSizeMaxTextSize="14dp"
-                    app:autoSizeStepGranularity="2dp" />
-
-                <View
-                    android:id="@+id/divider13_reviewReport"
-                    android:layout_width="1dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_height="match_parent"
-                    android:background="#ffffff"/>
-
-                <TextView
-                    android:id="@+id/textView10"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-medium"
-                    android:gravity="right|center_vertical"
-                    android:text="Help"
-                    android:textColor="#ffffff"
-                    app:autoSizeTextType="uniform"
-                    app:autoSizeMinTextSize="10dp"
-                    app:autoSizeMaxTextSize="14dp"
-                    app:autoSizeStepGranularity="2dp" />
-
-                <View
-                    android:id="@+id/divider14_reviewReport"
-                    android:layout_width="1dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_height="match_parent"
-                    android:background="#ffffff" />
-
-                <TextView
-                    android:id="@+id/textView_logout_reviewReport"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
-                    android:fontFamily="sans-serif-medium"
-                    android:text="Log Out"
-                    android:textColor="#ffffff"
-                    app:autoSizeTextType="uniform"
-                    app:autoSizeMinTextSize="10dp"
-                    app:autoSizeMaxTextSize="14dp"
-                    app:autoSizeStepGranularity="2dp" />
-
-            </LinearLayout>
-
-        </RelativeLayout>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_review_report"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            toolbar:titleTextColor="@color/white"
+            app:titleTextAppearance="@style/ActionBarTitle">
+        </android.support.v7.widget.Toolbar>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -163,7 +80,8 @@
                         android:text="Group No."
                         android:layout_weight="1"
                         android:textSize="16dp"
-                        android:textColor="#000000"
+                        android:textColor="@color/black"
+                        android:layout_gravity="center_vertical|left"
                         android:gravity="left|center_vertical"
                         android:padding="5dp" />
 
@@ -177,7 +95,8 @@
                         android:layout_weight="6"
                         android:textSize="16dp"
                         android:singleLine="true"
-                        android:textColor="#000000"
+                        android:textColor="@color/black"
+                        android:layout_gravity="center_vertical|left"
                         android:gravity="left|center_vertical"
                         android:padding="5dp"/>
 
@@ -191,7 +110,8 @@
                         android:layout_weight="12"
                         android:textSize="16dp"
                         android:singleLine="true"
-                        android:textColor="#000000"
+                        android:textColor="@color/black"
+                        android:layout_gravity="center_vertical|left"
                         android:gravity="left|center_vertical"
                         android:padding="5dp"/>
 
@@ -204,8 +124,9 @@
                         android:text="Email"
                         android:layout_weight="20"
                         android:textSize="16dp"
-                        android:textColor="#000000"
+                        android:textColor="@color/black"
                         android:singleLine="true"
+                        android:layout_gravity="center_vertical|left"
                         android:gravity="left|center_vertical"
                         android:padding="5dp" />
                 </LinearLayout>
@@ -216,7 +137,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="2"
                     android:choiceMode="multipleChoice"
-                    android:divider="#000000"
+                    android:divider="@color/black"
                     android:dividerHeight="1dp"
                     android:scrollbars="vertical" />
 
