--- a/app/src/main/res/layout/activity_assessment.xml
+++ b/app/src/main/res/layout/activity_assessment.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Assessment_Preparation_Activity">
@@ -11,104 +12,19 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="14"
-            android:background="@drawable/ic_header_background"
-            android:elevation="40dp">
-
-            <Button
-                android:id="@+id/btn_back_title"
-                android:layout_width="34dp"
-                android:layout_height="25dp"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="16dp"
-                android:background="@drawable/ic_back" />
-
-            <TextView
-                android:id="@+id/textView_projectName_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:fontFamily="sans-serif-medium"
-                android:text="Projects "
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                android:textColor="#ffffff"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                />
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true">
-
-                <TextView
-                    android:id="@+id/textView_helloUser_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="100"
-                    android:fontFamily="sans-serif-medium"
-                    android:text="Hello, Xxxxxx Xxxxxx"
-                    android:textColor="#ffffff"
-                    android:gravity="right|center_vertical"
-                    android:singleLine="true"
-                    app:autoSizeTextType="uniform"
-                    app:autoSizeMinTextSize="10dp"
-                    app:autoSizeMaxTextSize="14dp"
-                    app:autoSizeStepGranularity="2dp" />
-
-                <View
-                    android:id="@+id/divider13"
-                    android:layout_width="1dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_height="match_parent"
-                    android:background="#ffffff"/>
-
-                <TextView
-                    android:id="@+id/textView10"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-medium"
-                    android:text="Help"
-                    android:textColor="#ffffff"
-                    android:gravity="right|center_vertical"
-                    android:singleLine="true"
-                    app:autoSizeTextType="uniform"
-                    app:autoSizeMinTextSize="10dp"
-                    app:autoSizeMaxTextSize="14dp"
-                    app:autoSizeStepGranularity="2dp" />
-
-                <View
-                    android:id="@+id/divider14"
-                    android:layout_width="1dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_height="match_parent"
-                    android:background="#ffffff" />
-
-                <TextView
-                    android:id="@+id/textView_logout_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
-                    android:fontFamily="sans-serif-medium"
-                    android:text="Log Out"
-                    android:textColor="#ffffff"
-                    android:gravity="right|center_vertical"
-                    android:singleLine="true"
-                    app:autoSizeTextType="uniform"
-                    app:autoSizeMinTextSize="10dp"
-                    app:autoSizeMaxTextSize="14dp"
-                    app:autoSizeStepGranularity="2dp" />
-
-            </LinearLayout>
-
-        </RelativeLayout>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_assessment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            toolbar:titleTextColor="@color/white"
+            app:titleTextAppearance="@style/ActionBarTitle">
+        </android.support.v7.widget.Toolbar>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -134,7 +50,8 @@
                     android:layout_marginLeft="30dp"
                     android:paddingLeft="10dp"
                     android:layout_marginRight="10dp"
-                    android:textColor="#000000"/>
+                    android:textSize="20sp"
+                    android:textColor="@color/black"/>
 
                 <Button
                     android:id="@+id/btn_assessment_start"
@@ -148,14 +65,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textSize="24dp"
+                    android:textSize="24sp"
                     android:textStyle="bold"
                     android:textColor="#000000"
                     android:background="#ffffff"
                     android:paddingLeft="4dp"
                     android:gravity="center"
                     android:layout_gravity="center"
-                    android:text="15:30" />
+                    android:text="15:30"/>
 
                 <Button
                     android:id="@+id/btn_assessment_refresh"
@@ -174,13 +91,13 @@
                     android:text="Mark: 72%"
                     android:textColor="#000000"
                     android:paddingLeft="20dp"
-                    android:textSize="20dp"/>
+                    android:textSize="20sp"/>
 
                 <Button
                     android:id="@+id/btn_assessment_finish"
                     android:layout_width="wrap_content"
-                    android:layout_height="36dp"
-                    android:textSize="14dp"
+                    android:layout_height="40dp"
+                    android:textSize="20sp"
                     android:paddingLeft="16dp"
                     android:paddingRight="16dp"
                     android:layout_gravity="center"
@@ -214,7 +131,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Assessment"
-                            android:textSize="24dp"
+                            android:textSize="25sp"
                             android:textColor="#000000"
                             android:paddingLeft="16dp"
                             android:paddingTop="8dp"/>
@@ -236,37 +153,12 @@
                             android:layout_marginTop="6dp"/>
 
                         <TextView
-                            android:id="@+id/tv_commentOnly"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Comments Only"
-                            android:textSize="24dp"
-                            android:textColor="#000000"
-                            android:paddingLeft="16dp"
-                            android:paddingTop="5dp" />
-
-                        <View
-                            android:id="@+id/dv_commentOnly"
-                            android:layout_width="match_parent"
-                            android:layout_height="2dp"
-                            android:background="#797979"
-                            android:layout_marginLeft="16dp"
-                            android:layout_marginRight="16dp" />
-
-                        <ListView
-                            android:id="@+id/lv_commentOnly"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_marginLeft="16dp"
-                            android:layout_marginRight="16dp"
-                            android:layout_marginTop="6dp" />
-
-                        <TextView
                             android:id="@+id/tv_otherComment"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:textSize="24dp"
+                            android:textSize="25sp"
                             android:textColor="#000000"
+                            android:layout_marginTop="10dp"
                             android:paddingLeft="16dp"
                             android:paddingTop="5dp"
                             android:text="Other Comments"/>
@@ -292,7 +184,6 @@
                 </ScrollView>
             </RelativeLayout>
         </LinearLayout>
-
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
