--- a/app/src/main/res/layout/activity_assessment_comment.xml
+++ b/app/src/main/res/layout/activity_assessment_comment.xml
@@ -8,7 +8,7 @@
     <Button
         android:id="@+id/btn_assessment_comment_done"
         android:layout_width="wrap_content"
-        android:layout_height="36dp"
+        android:layout_height="40dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginTop="16dp"
@@ -17,7 +17,9 @@
         android:paddingLeft="16dp"
         android:onClick="commentDone"
         android:text="Done"
-        android:background="@drawable/ic_white_button"/>
+        android:textSize="20sp"
+        android:textColor="@color/white"
+        android:background="@color/colorPrimary"/>
 
     <LinearLayout
         android:layout_width="match_parent"
