--- a/app/src/main/res/layout/list_item_criteria_andmark.xml
+++ b/app/src/main/res/layout/list_item_criteria_andmark.xml
@@ -10,8 +10,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:text="TextView"
-            android:textColor="#6B6B6B"
-            android:textSize="14dp"
+            android:textColor="@color/black"
+            android:textSize="15sp"
             android:gravity="center"
             android:layout_marginTop="8dp"/>
 
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView_criteriaName_listItemCriteriaMark"
             android:text="TextView"
-            android:textColor="#A1A1A1"
-            android:textSize="14dp"
+            android:textColor="@color/black"
+            android:textSize="15sp"
             android:gravity="center"/>
     </RelativeLayout>
