--- a/app/src/main/res/layout/list_other_comment.xml
+++ b/app/src/main/res/layout/list_other_comment.xml
@@ -11,8 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:textColor="#000000"
-        android:textSize="16dp"
+        android:textColor="@color/black"
+        android:textSize="18sp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:paddingTop="20dp"
@@ -35,18 +35,21 @@
         android:minHeight="100dp"
         android:paddingLeft="5dp"
         android:paddingTop="5dp"
-        android:textSize="14dp" />
+        android:textSize="16sp" />
 
     <Button
         android:id="@+id/btn_assessment_save"
         android:layout_width="wrap_content"
-        android:layout_height="48dp"
+        android:layout_height="40dp"
         android:layout_below="@+id/et_other_comment"
         android:layout_alignParentEnd="true"
         android:layout_marginRight="20dp"
+        android:layout_marginTop="15dp"
         android:layout_marginBottom="30dp"
-        android:textSize="14dp"
+        android:textSize="20sp"
         android:paddingRight="16dp"
         android:paddingLeft="16dp"
-        android:text="Save" />
+        android:background="@color/colorPrimary"
+        android:text="Save"
+        android:textColor="@color/white"/>
 </RelativeLayout>
