--- a/app/src/main/res/layout/activity__editable_group_report.xml
+++ b/app/src/main/res/layout/activity__editable_group_report.xml
@@ -2,117 +2,29 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Assessment_Preparation_Activity"
-    >
+    tools:context=".Assessment_Preparation_Activity" >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        android:orientation="vertical" >
 
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="14"
-            android:background="@drawable/ic_header_background"
-            android:elevation="40dp">
-
-            <Button
-                android:id="@+id/button_back_title"
-                android:layout_width="34dp"
-                android:layout_height="25dp"
-                android:layout_centerVertical="true"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="15dp"
-                android:background="@drawable/ic_back" />
-
-            <TextView
-                android:id="@+id/textView_projectName_report"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:fontFamily="sans-serif-medium"
-                android:text="Projects "
-                android:textAlignment="center"
-                android:textColor="#ffffff"
-                android:textStyle="bold"
-                android:singleLine="true"
-                app:autoSizeTextType="uniform"
-                app:autoSizeMinTextSize="12dp"
-                app:autoSizeMaxTextSize="18dp"
-                app:autoSizeStepGranularity="2dp"
-                />
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toRightOf="@+id/textView_projectName_about"
-                xmlns:app="http://schemas.android.com/apk/res-auto">
-
-                <TextView
-                    android:id="@+id/textView_helloUser_report"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="100"
-                    android:fontFamily="sans-serif-medium"
-                    android:text="Hello, Xxxxxx Xxxxxx"
-                    android:textColor="#ffffff"
-                    android:gravity="right|center_vertical"
-                    android:singleLine="true"
-                    app:autoSizeTextType="uniform"
-                    app:autoSizeMinTextSize="10dp"
-                    app:autoSizeMaxTextSize="14dp"
-                    app:autoSizeStepGranularity="2dp" />
-
-                <View
-                    android:id="@+id/divider13_report"
-                    android:layout_width="1dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_height="match_parent"
-                    android:background="#ffffff"/>
-
-                <TextView
-                    android:id="@+id/textView_help_report"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="sans-serif-medium"
-                    android:gravity="right|center_vertical"
-                    android:text="Help"
-                    android:textColor="#ffffff"
-                    app:autoSizeTextType="uniform"
-                    app:autoSizeMinTextSize="10dp"
-                    app:autoSizeMaxTextSize="14dp"
-                    app:autoSizeStepGranularity="2dp" />
-
-                <View
-                    android:id="@+id/divider14_report"
-                    android:layout_width="1dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_height="match_parent"
-                    android:background="#ffffff" />
-
-                <TextView
-                    android:id="@+id/textView_logout"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
-                    android:fontFamily="sans-serif-medium"
-                    android:text="Log Out"
-                    android:textColor="#ffffff"
-                    app:autoSizeTextType="uniform"
-                    app:autoSizeMinTextSize="10dp"
-                    app:autoSizeMaxTextSize="14dp"
-                    app:autoSizeStepGranularity="2dp" />
-
-            </LinearLayout>
-
-        </RelativeLayout>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_editable_group_report"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            toolbar:titleTextColor="@color/white"
+            app:titleTextAppearance="@style/ActionBarTitle">
+        </android.support.v7.widget.Toolbar>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -160,8 +72,8 @@
                 <Button
                     android:id="@+id/button_edit_groupReport"
                     android:layout_width="wrap_content"
-                    android:layout_height="36dp"
-                    android:textSize="14dp"
+                    android:layout_height="40dp"
+                    android:textSize="20sp"
                     android:paddingLeft="16dp"
                     android:paddingRight="16dp"
                     android:text="Edit"
@@ -169,14 +81,14 @@
                     android:layout_marginRight="15dp"
                     android:gravity="center"
                     android:layout_gravity="center"
-                    android:textColor="#000000"
-                    android:background="@drawable/ic_edit_button"/>
+                    android:textColor="@color/white"
+                    android:background="@color/colorPrimary"/>
 
                 <Button
                     android:id="@+id/button_finalReport_groupReport"
                     android:layout_width="wrap_content"
-                    android:layout_height="36dp"
-                    android:textSize="13dp"
+                    android:layout_height="40dp"
+                    android:textSize="20sp"
                     android:paddingLeft="16dp"
                     android:paddingRight="16dp"
                     android:text="Final report"
@@ -184,8 +96,8 @@
                     android:layout_marginRight="15dp"
                     android:gravity="center"
                     android:layout_gravity="center"
-                    android:textColor="#ffffff"
-                    android:background="@drawable/ic_button_background"/>
+                    android:textColor="@color/white"
+                    android:background="@color/colorPrimary"/>
             </LinearLayout>
 
             <RelativeLayout
