--- a/app/src/main/res/layout/activity_editable_individual_report.xml
+++ b/app/src/main/res/layout/activity_editable_individual_report.xml
@@ -10,8 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        android:orientation="vertical" >
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar_editable_individual_report"
@@ -98,7 +97,6 @@
                     android:singleLine="true"
                     android:layout_marginRight="15dp"
                     android:gravity="center"
-                    android:onClick="finalReport"
                     android:layout_gravity="center"
                     android:textColor="@color/white"
                     android:background="@color/colorPrimary"/>
